force-app/main/default/objects/Section_Library__c/Section_Library__c.object-meta.xml
<CustomObject>
    <label>Section Library</label>
    <nameField>
        <displayFormat>SL-{000}</displayFormat>
        <label>Section Library Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sections Library</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>