force-app/main/default/objects/Section_Library__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <displayFormat>SL-{000}</displayFormat>
    <label>SL Number</label>
    <type>AutoNumber</type>
</CustomField>