force-app/main/default/objects/Section_Library__c/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <label>Section Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>