force-app/main/default/objects/Section_Library__c/fields/Sub_Section__c.field-meta.xml
<CustomField>
    <fullName>Sub_Section__c</fullName>
    <label>Section Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Section</fullName>
            </value>
            <value>
                <fullName>Subsection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>