force-app/main/default/objects/Section_Library__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activities of Daily Living (ADLs)</fullName>
            </value>
            <value>
                <fullName>Consumer Experience</fullName>
            </value>
            <value>
                <fullName>Falls and Major Injury</fullName>
            </value>
            <value>
                <fullName>Hospitalisation</fullName>
            </value>
            <value>
                <fullName>Medication Management</fullName>
            </value>
            <value>
                <fullName>Physical Restraint</fullName>
            </value>
            <value>
                <fullName>Pressure Injuries</fullName>
            </value>
            <value>
                <fullName>Quality of life</fullName>
            </value>
            <value>
                <fullName>Workforce</fullName>
            </value>
            <value>
                <fullName>Consumer Experience Interview</fullName>
            </value>
            <value>
                <fullName>Standard 1-Consumer Dignity and Choice</fullName>
            </value>
            <value>
                <fullName>Standard 2-Ongoing Assessment and Planning</fullName>
            </value>
            <value>
                <fullName>Standard 3-Personal Care and Clinical Care</fullName>
            </value>
            <value>
                <fullName>Standard 4-Services and Supports for daily living</fullName>
            </value>
            <value>
                <fullName>Standard 5-Organisation&apos;s service environment</fullName>
            </value>
            <value>
                <fullName>Standard 6- Feedback and complaints</fullName>
            </value>
            <value>
                <fullName>Standard 7-Human Resources</fullName>
            </value>
            <value>
                <fullName>Standard 8-Organisational Governance</fullName>
            </value>
            <value>
                <fullName>Quality Indicator Targets</fullName>
            </value>
            <value>
                <fullName>Incontinence Care</fullName>
            </value>
            <value>
                <fullName>Unplanned Weight Loss</fullName>
            </value>
            <value>
                <fullName>Incontinence (IAD)</fullName>
                <isActive>false</isActive>
                <label>Incontinence (IAD)</label>
            </value>
            <value>
                <fullName>Set up QI Targets</fullName>
                <isActive>false</isActive>
                <label>Set up QI Targets</label>
            </value>
            <value>
                <fullName>Unplanned Weight Lost</fullName>
                <isActive>false</isActive>
                <label>Unplanned Weight Lost</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>