force-app/main/default/objects/Section_Library__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Section_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Sub_Section__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>